[gd_scene load_steps=4 format=3 uid="uid://dyk04nogt5tk7"]

[ext_resource type="Script" path="res://Menus/start_menu.gd" id="1_cktmu"]
[ext_resource type="Theme" uid="uid://dkqrfy3kvl768" path="res://Menus/menu_theme.tres" id="2_guvi4"]
[ext_resource type="PackedScene" uid="uid://0j6h00qv1oe8" path="res://Menus/options_menu.tscn" id="3_dabwn"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_cktmu")
metadata/_edit_horizontal_guides_ = [643.0]
metadata/_edit_vertical_guides_ = [1146.0]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMenuContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_guvi4")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMenuContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TitleMenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
text = "Title of Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Start" type="Button" parent="TitleMenuContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Options" type="Button" parent="TitleMenuContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="OptionsMenu" parent="." instance=ExtResource("3_dabwn")]
visible = false

[connection signal="pressed" from="TitleMenuContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TitleMenuContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
